# d3foxed

./: .gitignore  CMakeLists.txt  README.md  cmake_linux.sh  cmake_msvc2019-x64.cmd  cmake_msvc2019.cmd  cmake_msvc2022-x64.cmd  cmake_msvc2022-x86.cmd  setup.cmake
neo/: CMakeLists.txt
neo/TypeInfo/: CMakeLists.txt  main.cpp
neo/curl/: CMakeLists.txt
neo/curl/lib/: connect.c  inet_pton.c
neo/d3xp/: CMakeLists.txt  Player.cpp
neo/d3xp/ai/: AAS_routing.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  Event.h
neo/d3xp/script/: Script_Interpreter.cpp
neo/framework/: BuildVersion.cpp  CVarSystem.h  Common.cpp  Console.cpp  FileSystem.h  Licensee.h  Unzip.cpp
neo/game/: Actor.cpp  CMakeLists.txt  Mover.cpp  Player.cpp
neo/game/anim/: Anim_Blend.cpp
neo/game/gamesys/: Class.cpp  Event.cpp  Event.h
neo/game/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp
neo/game_fracture/: CMakeLists.txt  MultiplayerGame.cpp  Player.cpp  precompiled.h
neo/game_fracture/gamesys/: Class.cpp  Class.h  Event.cpp
neo/game_fracture/physics/: Physics_Rope.cpp  Physics_Rope.h
neo/game_fracture/script/: Script_Compiler.cpp
neo/idlib/: CMakeLists.txt  CmdArgs.cpp  Dict.cpp  Heap.cpp  LangDict.cpp  Lib.cpp  Lib.h  Parser.cpp  Str.cpp  Str.h  precompiled.h
neo/idlib/geometry/: JointTransform.h
neo/idlib/math/: Math.h  Matrix.h  Random.h  Simd.cpp  Simd_Generic.cpp  Simd_SSE.cpp  Simd_SSE.h  Simd_SSE2.cpp  Vector.h
neo/idlib/sys/: sys_intrinsics.h
neo/maya2md5/: CMakeLists.txt
neo/qteditors/: CMakeLists.txt
neo/renderer/: Cinematic.cpp  Framebuffer.h  ImageData.cpp  ImageData.h  Image_files.cpp  RenderSystem_init.cpp  VertexCache.cpp  VertexCache.h  draw_glsl.cpp  tr_backend.cpp  tr_font.cpp  tr_local.h
neo/renderer/jpeg-6/: jerror.c
neo/sound/: snd_system.cpp
neo/sound/OggVorbis/ogg/: os_types.h
neo/sound/OggVorbis/vorbissrc/: os.h
neo/sys/: sys_public.h
neo/sys/posix/: posix_threads.cpp
neo/sys/win32/: win_cpu.cpp  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_net.cpp  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_taskkeyhook.cpp
neo/tools/af/: DialogAFBody.cpp  DialogAFBody.h  DialogAFConstraint.cpp  DialogAFConstraint.h  DialogAFConstraintBallAndSocket.cpp  DialogAFConstraintBallAndSocket.h  DialogAFConstraintFixed.cpp  DialogAFConstraintFixed.h  DialogAFConstraintHinge.cpp  DialogAFConstraintHinge.h  DialogAFConstraintSlider.cpp  DialogAFConstraintSlider.h  DialogAFConstraintSpring.cpp  DialogAFConstraintSpring.h  DialogAFConstraintUniversal.cpp  DialogAFConstraintUniversal.h  DialogAFProperties.cpp  DialogAFProperties.h  DialogAFView.cpp  DialogAFView.h
neo/tools/comafx/: CPathTreeCtrl.cpp  CPathTreeCtrl.h  CSyntaxRichEditCtrl.cpp  CSyntaxRichEditCtrl.h  DialogColorPicker.cpp  DialogColorPicker.h  StdAfx.cpp  StdAfx.h
neo/tools/common/: AlphaPopup.cpp  ColorButton.cpp  MaskEdit.cpp  OpenFileDialog.cpp  PropertyGrid.cpp  RollupPanel.cpp  SpinButton.cpp
neo/tools/common/PropTree/: PropTree.cpp
neo/tools/compilers/roqvq/: roq.cpp  roq.h
neo/tools/guied/: GEApp.cpp  GECheckInDlg.cpp  GEItemPropsDlg.cpp  GEItemScriptsDlg.cpp  GENavigator.cpp  GEProperties.cpp  GEPropertyPage.cpp  GEStatusBar.cpp  GETransformer.cpp  GEViewer.cpp  GEWindowWrapper.cpp  GEWorkspace.cpp  GEWorkspace.h
neo/tools/radiant/: CamWnd.cpp  CamWnd.h  EditViewDlg.cpp  EditViewDlg.h  EditorBrush.cpp  EntityDlg.cpp  EntityDlg.h  GLWidget.cpp  GLWidget.h  MainFrm.cpp  MainFrm.h  WIN_DLG.CPP  XYWnd.cpp  XYWnd.h  cmdlib.cpp
neo/ui/: DeviceContext.cpp  DeviceContext.h  GuiScript.h  RenderWindow.cpp  UserInterface.cpp  Window.cpp  Window.h  Winvar.h
release/base/glsl/: blendLight.vp  default.vp  envirosuit.fp  envirosuit.vp  flatcolor.fp  flatcolor.vp  fogLight.vp  heathazeWithMask.vp  heathazeWithMaskAndVertex.vp  intensity.vp  interaction.fp  shadow.fp  shadows.inc  skybox.vp  vertexcolor.fp  vertexcolor.vp
release/base/models/materialeditor/: cylinder_h.ase  cylinder_v.ase  sphere64.ase
release/fracture/materials/: dev.mtr
release/fracture/textures/dev/: dev_blue_base_banner.tga  dev_red_base_banner.tga  dev_tile_blue_00.tga  dev_tile_generic_00.tga  dev_tile_generic_01.tga  dev_tile_red_00.tga
resources/: icon.psd
scripts/: create_appimage.sh
